--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -888,24 +888,7 @@ allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.190.216.8;
-allow 23.191.200.10;
-allow 23.191.200.11;
-allow 23.191.200.12;
-allow 23.191.200.13;
-allow 23.191.200.14;
-allow 23.191.200.15;
-allow 23.191.200.16;
-allow 23.191.200.17;
-allow 23.191.200.18;
-allow 23.191.200.19;
 allow 23.191.200.2;
-allow 23.191.200.20;
-allow 23.191.200.21;
-allow 23.191.200.22;
-allow 23.191.200.23;
-allow 23.191.200.24;
-allow 23.191.200.25;
-allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
@@ -915,9 +898,6 @@ allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
-allow 23.191.200.7;
-allow 23.191.200.8;
-allow 23.191.200.9;
 allow 23.236.122.193;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
@@ -1220,12 +1200,17 @@ allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
+allow 2a04:52c0:104:31e6::1;
+allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:115:df08::1;
 allow 2a04:52c0:116:e0e3::1;
+allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1721,12 +1706,15 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.110.120;
 allow 5.255.111.64;
+allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.151;
@@ -1739,6 +1727,8 @@ allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
 allow 5.255.98.23;
+allow 5.255.99.124;
+allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.72.110;
@@ -1755,7 +1745,6 @@ allow 57.129.91.235;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
-allow 62.182.84.146;
 allow 62.72.47.105;
 allow 64.190.113.221;
 allow 64.190.76.10;
