--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -888,24 +888,7 @@ deny 23.151.8.8;
 deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.190.216.8;
-deny 23.191.200.10;
-deny 23.191.200.11;
-deny 23.191.200.12;
-deny 23.191.200.13;
-deny 23.191.200.14;
-deny 23.191.200.15;
-deny 23.191.200.16;
-deny 23.191.200.17;
-deny 23.191.200.18;
-deny 23.191.200.19;
 deny 23.191.200.2;
-deny 23.191.200.20;
-deny 23.191.200.21;
-deny 23.191.200.22;
-deny 23.191.200.23;
-deny 23.191.200.24;
-deny 23.191.200.25;
-deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
@@ -915,9 +898,6 @@ deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
-deny 23.191.200.7;
-deny 23.191.200.8;
-deny 23.191.200.9;
 deny 23.236.122.193;
 deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
@@ -1220,12 +1200,17 @@ deny 2a04:52c0:101:46a::;
 deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
+deny 2a04:52c0:104:31e6::1;
+deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:115:df08::1;
 deny 2a04:52c0:116:e0e3::1;
+deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1721,12 +1706,15 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.224;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.110.120;
 deny 5.255.111.64;
+deny 5.255.114.171;
 deny 5.255.115.58;
 deny 5.255.117.56;
 deny 5.255.118.151;
@@ -1739,6 +1727,8 @@ deny 5.255.97.221;
 deny 5.255.98.151;
 deny 5.255.98.198;
 deny 5.255.98.23;
+deny 5.255.99.124;
+deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.72.110;
@@ -1755,7 +1745,6 @@ deny 57.129.91.235;
 deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
-deny 62.182.84.146;
 deny 62.72.47.105;
 deny 64.190.113.221;
 deny 64.190.76.10;
