--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -888,24 +888,7 @@ set_real_ip_from 23.151.8.8;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.190.216.8;
-set_real_ip_from 23.191.200.10;
-set_real_ip_from 23.191.200.11;
-set_real_ip_from 23.191.200.12;
-set_real_ip_from 23.191.200.13;
-set_real_ip_from 23.191.200.14;
-set_real_ip_from 23.191.200.15;
-set_real_ip_from 23.191.200.16;
-set_real_ip_from 23.191.200.17;
-set_real_ip_from 23.191.200.18;
-set_real_ip_from 23.191.200.19;
 set_real_ip_from 23.191.200.2;
-set_real_ip_from 23.191.200.20;
-set_real_ip_from 23.191.200.21;
-set_real_ip_from 23.191.200.22;
-set_real_ip_from 23.191.200.23;
-set_real_ip_from 23.191.200.24;
-set_real_ip_from 23.191.200.25;
-set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
@@ -915,9 +898,6 @@ set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
-set_real_ip_from 23.191.200.7;
-set_real_ip_from 23.191.200.8;
-set_real_ip_from 23.191.200.9;
 set_real_ip_from 23.236.122.193;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
@@ -1220,12 +1200,17 @@ set_real_ip_from 2a04:52c0:101:46a::;
 set_real_ip_from 2a04:52c0:102:46e0::1;
 set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
+set_real_ip_from 2a04:52c0:104:31e6::1;
+set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:82c0::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:115:df08::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
+set_real_ip_from 2a04:52c0:119:3f0b::1;
 set_real_ip_from 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1721,12 +1706,15 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.224;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.110.120;
 set_real_ip_from 5.255.111.64;
+set_real_ip_from 5.255.114.171;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
 set_real_ip_from 5.255.118.151;
@@ -1739,6 +1727,8 @@ set_real_ip_from 5.255.97.221;
 set_real_ip_from 5.255.98.151;
 set_real_ip_from 5.255.98.198;
 set_real_ip_from 5.255.98.23;
+set_real_ip_from 5.255.99.124;
+set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
@@ -1755,7 +1745,6 @@ set_real_ip_from 57.129.91.235;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
-set_real_ip_from 62.182.84.146;
 set_real_ip_from 62.72.47.105;
 set_real_ip_from 64.190.113.221;
 set_real_ip_from 64.190.76.10;
