--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -191,7 +191,6 @@ deny 172.105.20.12;
 deny 172.232.209.254;
 deny 172.233.82.41;
 deny 172.234.228.174;
-deny 172.236.179.103;
 deny 172.81.131.139;
 deny 172.81.131.156;
 deny 172.81.132.94;
@@ -592,7 +591,6 @@ deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 196.196.200.100;
-deny 196.251.69.116;
 deny 198.167.206.197;
 deny 198.251.84.163;
 deny 198.251.84.237;
@@ -881,6 +879,7 @@ deny 23.129.64.224;
 deny 23.129.64.225;
 deny 23.129.64.99;
 deny 23.137.248.100;
+deny 23.137.253.109;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
@@ -906,12 +905,9 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
-deny 23.191.200.27;
-deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
-deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
@@ -944,7 +940,6 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
-deny 2600:3c16::2000:eaff:fe85:3765;
 deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
@@ -960,6 +955,7 @@ deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -1826,7 +1822,6 @@ deny 83.96.213.63;
 deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
-deny 84.211.224.201;
 deny 84.239.46.144;
 deny 85.93.218.204;
 deny 85.93.31.31;
