--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -252,7 +252,6 @@ deny 185.100.87.192;
 deny 185.100.87.250;
 deny 185.100.87.41;
 deny 185.10.16.41;
-deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
@@ -278,6 +277,7 @@ deny 185.129.61.9;
 deny 185.129.62.62;
 deny 185.129.62.63;
 deny 185.130.47.58;
+deny 185.132.53.150;
 deny 185.138.88.25;
 deny 185.14.31.113;
 deny 185.150.28.13;
@@ -774,6 +774,7 @@ deny 212.21.66.6;
 deny 212.38.189.186;
 deny 212.69.167.80;
 deny 212.73.134.204;
+deny 212.95.50.77;
 deny 213.111.150.96;
 deny 216.239.90.19;
 deny 216.73.159.101;
@@ -880,7 +881,6 @@ deny 23.129.64.224;
 deny 23.129.64.225;
 deny 23.129.64.99;
 deny 23.137.248.100;
-deny 23.137.253.109;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
@@ -908,11 +908,11 @@ deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
+deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
-deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -957,7 +957,6 @@ deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
-deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -1199,7 +1198,6 @@ deny 2a03:4000:6:614:d803:40ff:fec3:832a;
 deny 2a03:4000:66:15:18a0:6bff:fe90:3147;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-deny 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
 deny 2a03:e600:100::3;
@@ -1222,7 +1220,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:82c0::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1254,7 +1251,6 @@ deny 2a06:1700:1:108::b829:eee2;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
-deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -1570,6 +1566,7 @@ deny 2a12:bec4:1821:3a6::a;
 deny 2a12:bec4:1821:3a7::a;
 deny 2a12:bec4:1821:3a8::a;
 deny 2a14:1ec7:1000:a633::1;
+deny 2a14:7583:f607::;
 deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
 deny 31.133.0.210;
@@ -1606,6 +1603,7 @@ deny 38.135.25.144;
 deny 38.135.25.2;
 deny 38.60.249.223;
 deny 43.160.194.14;
+deny 44.30.4.69;
 deny 45.11.59.28;
 deny 45.12.3.80;
 deny 45.128.133.242;
@@ -1706,7 +1704,6 @@ deny 46.232.251.191;
 deny 46.234.47.105;
 deny 46.250.243.29;
 deny 46.29.238.25;
-deny 46.38.243.210;
 deny 5.101.82.22;
 deny 5.104.84.183;
 deny 5.104.86.6;
@@ -1722,7 +1719,6 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
 deny 5.255.100.224;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1848,6 +1844,7 @@ deny 89.147.110.82;
 deny 89.147.111.87;
 deny 89.185.82.63;
 deny 89.234.157.254;
+deny 89.36.231.128;
 deny 89.58.26.216;
 deny 89.58.41.156;
 deny 91.132.144.59;
