--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -123,8 +123,6 @@ allow 130.193.15.186;
 allow 130.193.15.79;
 allow 131.72.79.38;
 allow 13.231.183.75;
-allow 135.125.239.51;
-allow 135.125.239.70;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -162,7 +160,6 @@ allow 162.220.14.78;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
-allow 164.132.58.8;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 171.25.193.131;
@@ -193,6 +190,7 @@ allow 172.233.82.41;
 allow 172.234.228.174;
 allow 172.81.131.139;
 allow 172.81.131.156;
+allow 172.81.132.149;
 allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.224.219.236;
@@ -213,6 +211,7 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
+allow 177.149.156.209;
 allow 177.93.140.66;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -549,7 +548,6 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
-allow 193.237.155.109;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.239.232.235;
@@ -628,15 +626,12 @@ allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:305:2100::4ede;
-allow 2001:41d0:401:3000::1f88;
 allow 2001:41d0:601:1100::26d0;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
-allow 2001:41d0:701:1100::57d3;
-allow 2001:41d0:701:1100::968d;
 allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:805:d300::2b19:1929;
 allow 2001:41d0:a:5c0::1;
@@ -907,8 +902,6 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.28;
-allow 23.191.200.29;
-allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1219,7 +1212,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1464,13 +1456,13 @@ allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7::216:3cff:fe6f:c4ca;
+allow 2a0e:bfc7::216:3cff:fece:19ec;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:16a4::1;
 allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
-allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
@@ -1489,6 +1481,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
+allow 2a12:5e40:1:6dff:c13f:fe36:19c3:e562;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:223;
@@ -1651,7 +1644,6 @@ allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.154.98.33;
 allow 45.38.20.123;
-allow 45.38.20.153;
 allow 45.38.20.181;
 allow 45.58.190.74;
 allow 45.61.185.172;
@@ -1719,7 +1711,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1746,7 +1737,6 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
-allow 5.34.182.203;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 5.45.102.93;
@@ -1865,6 +1855,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.227.114.153;
+allow 91.239.208.63;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
