--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -11,15 +11,12 @@ allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:305:2100::4ede;
-allow 2001:41d0:401:3000::1f88;
 allow 2001:41d0:601:1100::26d0;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
-allow 2001:41d0:701:1100::57d3;
-allow 2001:41d0:701:1100::968d;
 allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:805:d300::2b19:1929;
 allow 2001:41d0:a:5c0::1;
@@ -410,7 +407,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -655,13 +651,13 @@ allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7::216:3cff:fe6f:c4ca;
+allow 2a0e:bfc7::216:3cff:fece:19ec;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:16a4::1;
 allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
-allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:356:62ed::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
@@ -680,6 +676,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
+allow 2a12:5e40:1:6dff:c13f:fe36:19c3:e562;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:223;
