--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -123,8 +123,6 @@ set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 131.72.79.38;
 set_real_ip_from 13.231.183.75;
-set_real_ip_from 135.125.239.51;
-set_real_ip_from 135.125.239.70;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
@@ -162,7 +160,6 @@ set_real_ip_from 162.220.14.78;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
-set_real_ip_from 164.132.58.8;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 171.25.193.131;
@@ -193,6 +190,7 @@ set_real_ip_from 172.233.82.41;
 set_real_ip_from 172.234.228.174;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
+set_real_ip_from 172.81.132.149;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.224.219.236;
@@ -213,6 +211,7 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.149.156.209;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
@@ -549,7 +548,6 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
-set_real_ip_from 193.237.155.109;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.239.232.235;
@@ -628,15 +626,12 @@ set_real_ip_from 2001:41d0:304:200::3348;
 set_real_ip_from 2001:41d0:304:200::3ea4;
 set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:305:2100::4ede;
-set_real_ip_from 2001:41d0:401:3000::1f88;
 set_real_ip_from 2001:41d0:601:1100::26d0;
 set_real_ip_from 2001:41d0:601:1100::6524;
 set_real_ip_from 2001:41d0:601:1100::6f85;
 set_real_ip_from 2001:41d0:601:1100::71bb;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1000::5196;
-set_real_ip_from 2001:41d0:701:1100::57d3;
-set_real_ip_from 2001:41d0:701:1100::968d;
 set_real_ip_from 2001:41d0:720:e300:25::;
 set_real_ip_from 2001:41d0:805:d300::2b19:1929;
 set_real_ip_from 2001:41d0:a:5c0::1;
@@ -907,8 +902,6 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
@@ -1219,7 +1212,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1464,13 +1456,13 @@ set_real_ip_from 2a0e:bfc0:0:2::8a62;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
 set_real_ip_from 2a0e:bfc7::216:3cff:fe6f:c4ca;
+set_real_ip_from 2a0e:bfc7::216:3cff:fece:19ec;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:16a4::1;
 set_real_ip_from 2a0f:85c1:356:231b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:5a46::1;
-set_real_ip_from 2a0f:85c1:356:5c50::1;
 set_real_ip_from 2a0f:85c1:356:62ed::1;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
 set_real_ip_from 2a0f:df00:0:255::194;
@@ -1489,6 +1481,7 @@ set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
+set_real_ip_from 2a12:5e40:1:6dff:c13f:fe36:19c3:e562;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:223;
@@ -1651,7 +1644,6 @@ set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.154.98.33;
 set_real_ip_from 45.38.20.123;
-set_real_ip_from 45.38.20.153;
 set_real_ip_from 45.38.20.181;
 set_real_ip_from 45.58.190.74;
 set_real_ip_from 45.61.185.172;
@@ -1719,7 +1711,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
 set_real_ip_from 5.255.100.224;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1746,7 +1737,6 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 5.34.182.203;
 set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.108.162;
 set_real_ip_from 5.45.102.93;
@@ -1865,6 +1855,7 @@ set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.227.114.153;
+set_real_ip_from 91.239.208.63;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
